--- a/src/app/views/report/report.component.html
+++ b/src/app/views/report/report.component.html
@@ -3,3 +3,6 @@
     <p-tabMenu [model]="items" [activeItem]="items[0]" ></p-tabMenu>
   </div>
 </div>
+
+<app-report-table confUrl="/api/secured/Report/Config?reportTable=zgmartli" >
+</app-report-table>
