--- a/src/app/components/report-table/report-table.component.css
+++ b/src/app/components/report-table/report-table.component.css
@@ -1,9 +1,9 @@
 /* Error: expected selector.
  *   ,
- * 1 | /deep/ app-report.component.ts-table{
+ * 1 | /deep/ app-report-table{
  *   | ^
  *   '
- *   report.component.ts-table.component.scss 1:1  root stylesheet */
+ *   report-table.component.scss 1:1  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-report-table{\a   \2502  ^\a   \2575 \a   report-table.component.scss 1:1  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-report-table{\d\a   \2502  ^\a   \2575 \a   report-table.component.scss 1:1  root stylesheet";
 }
