--- a/src/app/views/management/property/property.component.css
+++ b/src/app/views/management/property/property.component.css
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502   /deep/ app-property{\a   \2502   ^\a   \2575 \a   property.component.scss 1:2  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502   /deep/ app-property{\d\a   \2502   ^\a   \2575 \a   property.component.scss 1:2  root stylesheet";
 }
